# cogmo

./: .gitignore  AUTOGNOSIS_README.md  BUILD_FIX_DOCUMENTATION.md  CMakeLists.txt  DEVELOPER_GUIDE.md  ECOSYSTEM_IMPROVEMENT_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MOSES_FOUNDATION_API.md  NEXT_CYCLE_FEATURES.md  ONTOGENESIS_IMPLEMENTATION_COMPLETE.md  ONTOGENESIS_USAGE_GUIDE.md  UNIFIED_COGNITIVE_BUILD_ORCHESTRATION.md  WORKFLOW_ORCHESTRATION_COMPLETE.md  autognosis_demo.py  autognosis_demo_results.json  autognosis_synthesis.py  build-unified.sh  cognitive_documentation_generator.py  cognitive_validation_framework.py  fix-build-failures.sh  ggml-cognitive-kernels.scm  moses_foundation_demo.sh  moses_tensor_validation.py  ontogenesis-issues.json  phase6_comprehensive_report.json  phase6_unified_implementation.py  requirements-consolidated.txt  requirements.txt  simulate_global_differentiation.py  simulate_local_integration.py  test_build_fixes.sh  test_global.json  test_local.json  test_synthesis.json  test_workflow_validation.py  validate_workflows.py
.github/: BUILD_FIX_SUMMARY.md
.github/scripts/: install-deps.sh  test-install-deps.sh
.github/workflows/: README-modular.md  atomspace-build.yml  autognosis-simulation.yml  cogci.yml  cogml-build.yml  cogml-full2.yml  cogml-modular-dispatch.yml  cogserver-build.yml  cogutil-build.yml  efficient-build.yml  github_workflows_cognitive-orchestration.yml  moses-build.yml  moses-foundation-ci.yml  oc-1-cogutil.yml  oc-2-atomspace.yml  oc-2-moses.yml  oc-3-atomspace-restful.yml  oc-3-atomspace-rocks.yml  oc-3-cogserver.yml  oc-3-unify.yml  oc-3-ure.yml  oc-4-asmoses.yml  oc-4-miner.yml  oc-4-pln.yml  oc-4-spacetime.yml  oc-5-learn.yml  oc-6-opencog.yml  oc-7-generate-docs.yml  oc-7-opencog-debian.yml  oc-asmoses.yml  oc.yml  pln-modular-build.yml  unified-ci.yml  ure-build.yml
ci_artifacts/: escalation_report.json  success_report.json
docs/: BUILD_TIMEOUT_FIX.md  build-timeout-fix-explanation.sh
orc-dv/cogutil/: CMakeLists.txt
orc-dv/cogutil/cmake/: cogutil-config.cmake.in
orc-dv/cogutil/opencog/util/: CMakeLists.txt  cogutil.h  tensor_utils.cc  tensor_utils.h
orc-dv/cogutil/tests/util/: CMakeLists.txt  TensorUtilsUTest.cxxtest
orc-dv/cogutil_minimal/: CMakeLists.txt  README.md
orc-dv/cogutil_minimal/include/: cogutil_minimal.h  tensor_utils_minimal.h
orc-dv/cogutil_minimal/src/: cogutil_minimal.cc  tensor_utils_minimal.cc
orc-dv/cogutil_minimal/tests/: test_main.cc
phase6_documentation/: architecture_overview.md  cognitive_patterns.json  phase6_implementation_summary.md  test_coverage_report.json  unified_tensor_specification.md
scripts/: auto_fix.py  demo_ontogenesis.sh  ontogenesis_generator.py  test_auto_fix.py  test_ontogenesis.py  validate-unified-workflow.sh
src/: CMakeLists.txt  main.cpp
tests/: test_coevolution.py  test_organizational_isomorphism.py  test_phase6_advanced_testing.py  test_phase6_cognitive_unification.py  test_recursive_self_application.py
